--- a/src/runtime/Python.Runtime.csproj
+++ b/src/runtime/Python.Runtime.csproj
@@ -2,10 +2,28 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Python.Runtime.NETStandard</AssemblyName>
+    <Version>3.7.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl>http://pythonnet.github.io/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/henon/pythonnet_netstandard</PackageProjectUrl>
+    <Description>Python for .NET compiled against .Net Standard 2.0 and CPython 3.7
+</Description>
+    <Copyright>2019</Copyright>
+    <Authors>Meinrad Recheis, Python for .NET Team</Authors>
+    <Company />
+    <RepositoryUrl>https://github.com/henon/pythonnet_netstandard</RepositoryUrl>
+    <RepositoryType>github</RepositoryType>
+    <PackageTags>Python, pythonnet,</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;PYTHON3;PYTHON37;UCS2</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>TRACE;PYTHON3;PYTHON37;UCS2</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
